--- a/ios/GameOfThrones.xcodeproj/xcshareddata/xcschemes/GameOfThrones.xcscheme
+++ b/ios/GameOfThrones.xcodeproj/xcshareddata/xcschemes/GameOfThrones.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "project.app"
-               BlueprintName = "project"
-               ReferencedContainer = "container:project.xcodeproj">
+               BuildableName = "GameOfThrones.app"
+               BlueprintName = "GameOfThrones"
+               ReferencedContainer = "container:GameOfThrones.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "projectTests.xctest"
-               BlueprintName = "projectTests"
-               ReferencedContainer = "container:project.xcodeproj">
+               BuildableName = "GameOfThronesTests.xctest"
+               BlueprintName = "GameOfThronesTests"
+               ReferencedContainer = "container:GameOfThrones.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "projectTests.xctest"
-               BlueprintName = "projectTests"
-               ReferencedContainer = "container:project.xcodeproj">
+               BuildableName = "GameOfThronesTests.xctest"
+               BlueprintName = "GameOfThronesTests"
+               ReferencedContainer = "container:GameOfThrones.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "project.app"
-            BlueprintName = "project"
-            ReferencedContainer = "container:project.xcodeproj">
+            BuildableName = "GameOfThrones.app"
+            BlueprintName = "GameOfThrones"
+            ReferencedContainer = "container:GameOfThrones.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "project.app"
-            BlueprintName = "project"
-            ReferencedContainer = "container:project.xcodeproj">
+            BuildableName = "GameOfThrones.app"
+            BlueprintName = "GameOfThrones"
+            ReferencedContainer = "container:GameOfThrones.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "project.app"
-            BlueprintName = "project"
-            ReferencedContainer = "container:project.xcodeproj">
+            BuildableName = "GameOfThrones.app"
+            BlueprintName = "GameOfThrones"
+            ReferencedContainer = "container:GameOfThrones.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
