--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "project",
+	"name": "GameOfThrones",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -7,8 +7,12 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"native-base": "^0.5.15",
 		"react": "15.4.1",
-		"react-native": "0.39.2"
+		"react-native": "*",
+		"react-native-router-flux": "^3.37.0",
+		"react-redux": "^5.0.1",
+		"redux": "^3.6.0"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
