--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "18.0.0",
-    "react-test-renderer": "15.4.1"
+    "react-test-renderer": "15.4.1",
+    "reactotron-react-native": "^1.6.0",
+    "reactotron-redux": "^1.6.1"
   },
   "jest": {
     "preset": "react-native"
