--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native-router-flux": "^3.37.0",
     "react-native-vector-icons": "^3.0.0",
     "react-redux": "^5.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
